--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,10 @@ on: # rebuild any PRs and main branch changes
     branches:
       - main
       - 'releases/*'
+  issue_comment:
+    types: [created]
+  pull_request_review:
+    types: [submitted]
 
 jobs:
   build: # make sure build/ci work properly
@@ -21,4 +25,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./
         with:
-          milliseconds: 1000
+          slack-channel-id: C02J6909X44
+        env:
+          SLACK_SIGNING_SECRET: ${{ secrets.SLACK_SIGNING_SECRET }}
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
