--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slack-pr-actions",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "private": true,
   "description": "Publish PRs as a message to a slack channel updates the message with emojis representing the PR status.",
   "main": "lib/main.js",
@@ -26,22 +26,24 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.6.0",
-    "@actions/github": "^5.0.0",
+    "@actions/github": "^6.0.0",
     "@slack/bolt": "^3.7.0",
     "@slack/web-api": "^6.4.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
-    "@types/node": "^16.11.6",
-    "@typescript-eslint/parser": "^5.2.0",
-    "@vercel/ncc": "^0.31.1",
-    "eslint": "^7.32.0",
+    "@types/node": "^20.11.16",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vercel/ncc": "^0.38.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-github": "^4.3.2",
-    "eslint-plugin-jest": "^25.2.2",
-    "jest": "^27.3.1",
+    "eslint-plugin-jest": "^27.6.3",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
-    "prettier": "2.4.1",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.4.4"
+    "prettier": "3.2.5",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.3.3"
   }
 }
